squash and test fix