@@ -1,6 +1,7 @@
 package bio.terra.tanagra.query.sql.translator.filter;
 
 import bio.terra.tanagra.api.filter.BooleanAndOrFilter;
+import bio.terra.tanagra.api.filter.EntityFilter;
 import bio.terra.tanagra.query.sql.SqlField;
 import bio.terra.tanagra.query.sql.SqlParams;
 import bio.terra.tanagra.query.sql.translator.ApiFilterTranslator;
@@ -9,12 +10,10 @@ import bio.terra.tanagra.underlay.entitymodel.Attribute;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 public class BooleanAndOrFilterTranslator extends ApiFilterTranslator {
   private final BooleanAndOrFilter booleanAndOrFilter;
   private final List<ApiFilterTranslator> subFilterTranslators;
-  private final Optional<ApiFilterTranslator> mergedSubFiltersTranslator;
 
   public BooleanAndOrFilterTranslator(
       ApiTranslator apiTranslator,
@@ -22,30 +21,33 @@ public class BooleanAndOrFilterTranslator extends ApiFilterTranslator {
       Map<Attribute, SqlField> attributeSwapFields) {
     super(apiTranslator, attributeSwapFields);
     this.booleanAndOrFilter = booleanAndOrFilter;
-    this.mergedSubFiltersTranslator =
-        apiTranslator.optionalMergedTranslator(
-            booleanAndOrFilter.getSubFilters(),
-            booleanAndOrFilter.getOperator(),
-            attributeSwapFields);
+
+    // Get a single merged translator if the sub-filters are mergeable: must be of the same type
+    // Additional checks may be needed for individual sub-filter types
+    Optional<ApiFilterTranslator> mergedTranslator =
+        EntityFilter.areSameFilterType(booleanAndOrFilter.getSubFilters())
+            ? apiTranslator.mergedTranslator(
+                booleanAndOrFilter.getSubFilters(),
+                booleanAndOrFilter.getOperator(),
+                attributeSwapFields)
+            : Optional.empty();
+
     this.subFilterTranslators =
-        mergedSubFiltersTranslator.isEmpty()
-            ? booleanAndOrFilter.getSubFilters().stream()
-                .map(filter -> apiTranslator.translator(filter, attributeSwapFields))
-                .collect(Collectors.toList())
-            : List.of();
+        mergedTranslator
+            .map(List::of)
+            .orElseGet(
+                () ->
+                    booleanAndOrFilter.getSubFilters().stream()
+                        .map(filter -> apiTranslator.translator(filter, attributeSwapFields))
+                        .toList());
   }
 
   @Override
   public String buildSql(SqlParams sqlParams, String tableAlias) {
-    List<String> subFilterSqls;
-    if (mergedSubFiltersTranslator.isPresent()) {
-      subFilterSqls = List.of(mergedSubFiltersTranslator.get().buildSql(sqlParams, tableAlias));
-    } else {
-      subFilterSqls =
-          subFilterTranslators.stream()
-              .map(subFilterTranslator -> subFilterTranslator.buildSql(sqlParams, tableAlias))
-              .toList();
-    }
+    List<String> subFilterSqls =
+        subFilterTranslators.stream()
+            .map(subFilterTranslator -> subFilterTranslator.buildSql(sqlParams, tableAlias))
+            .toList();
     return apiTranslator.booleanAndOrFilterSql(
         booleanAndOrFilter.getOperator(), subFilterSqls.toArray(new String[0]));
   }
